nohup.out
npm info it worked if it ends with ok
npm verb cli [ '/usr/local/bin/node', '/bin/npm', 'start' ]
npm info using npm@3.10.10
npm info using node@v6.17.1
npm verb run-script [ 'prestart', 'start', 'poststart' ]
npm info lifecycle exl-touchnet-connector@0.0.4~prestart: exl-touchnet-connector@0.0.4
npm info lifecycle exl-touchnet-connector@0.0.4~start: exl-touchnet-connector@0.0.4

> exl-touchnet-connector@0.0.4 start /usr/local/htdocs/exl-touchnet-connector
> node app/index.js

/usr/local/htdocs/exl-touchnet-connector/app/index.js:24
const init = async (touchnet_ws_url) => {
                   ^

SyntaxError: Unexpected token (
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:549:28)
    at Object.Module._extensions..js (module.js:586:10)
    at Module.load (module.js:494:32)
    at tryModuleLoad (module.js:453:12)
    at Function.Module._load (module.js:445:3)
    at Module.runMain (module.js:611:10)
    at run (bootstrap_node.js:394:7)
    at startup (bootstrap_node.js:160:9)

npm verb lifecycle exl-touchnet-connector@0.0.4~start: unsafe-perm in lifecycle true
npm verb lifecycle exl-touchnet-connector@0.0.4~start: PATH: /usr/lib/node_modules/npm/bin/node-gyp-bin:/usr/local/htdocs/exl-touchnet-connector/node_modules/.bin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin:/opt/puppetlabs/bin
npm verb lifecycle exl-touchnet-connector@0.0.4~start: CWD: /usr/local/htdocs/exl-touchnet-connector
npm info lifecycle exl-touchnet-connector@0.0.4~start: Failed to exec start script
npm verb stack Error: exl-touchnet-connector@0.0.4 start: `node app/index.js`
npm verb stack Exit status 1
npm verb stack     at EventEmitter.<anonymous> (/usr/lib/node_modules/npm/lib/utils/lifecycle.js:255:16)
npm verb stack     at emitTwo (events.js:106:13)
npm verb stack     at EventEmitter.emit (events.js:191:7)
npm verb stack     at ChildProcess.<anonymous> (/usr/lib/node_modules/npm/lib/utils/spawn.js:40:14)
npm verb stack     at emitTwo (events.js:106:13)
npm verb stack     at ChildProcess.emit (events.js:191:7)
npm verb stack     at maybeClose (internal/child_process.js:920:16)
npm verb stack     at Process.ChildProcess._handle.onexit (internal/child_process.js:230:5)
npm verb pkgid exl-touchnet-connector@0.0.4
npm verb cwd /usr/local/htdocs/exl-touchnet-connector
npm ERR! Linux 3.10.0-1160.49.1.el7.x86_64
npm ERR! argv "/usr/local/bin/node" "/bin/npm" "start"
npm ERR! node v6.17.1
npm ERR! npm  v3.10.10
npm ERR! code ELIFECYCLE
npm ERR! exl-touchnet-connector@0.0.4 start: `node app/index.js`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the exl-touchnet-connector@0.0.4 start script 'node app/index.js'.
npm ERR! Make sure you have the latest version of node.js and npm installed.
npm ERR! If you do, this is most likely a problem with the exl-touchnet-connector package,
npm ERR! not with npm itself.
npm ERR! Tell the author that this fails on your system:
npm ERR!     node app/index.js
npm ERR! You can get information on how to open an issue for this project with:
npm ERR!     npm bugs exl-touchnet-connector
npm ERR! Or if that isn't available, you can get their info via:
npm ERR!     npm owner ls exl-touchnet-connector
npm ERR! There is likely additional logging output above.
npm verb exit [ 1, true ]

npm ERR! Please include the following file with any support request:
npm ERR!     /usr/local/htdocs/exl-touchnet-connector/npm-debug.log
npm info it worked if it ends with ok
npm verb cli [ '/usr/local/bin/node', '/bin/npm', 'start' ]
npm info using npm@3.10.10
npm info using node@v6.17.1
npm verb run-script [ 'prestart', 'start', 'poststart' ]
npm info lifecycle exl-touchnet-connector@0.0.4~prestart: exl-touchnet-connector@0.0.4
npm info lifecycle exl-touchnet-connector@0.0.4~start: exl-touchnet-connector@0.0.4

> exl-touchnet-connector@0.0.4 start /usr/local/htdocs/exl-touchnet-connector
> node app/index.js

/usr/local/htdocs/exl-touchnet-connector/app/index.js:25
const init = async (touchnet_ws_url) => {
                   ^

SyntaxError: Unexpected token (
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:549:28)
    at Object.Module._extensions..js (module.js:586:10)
    at Module.load (module.js:494:32)
    at tryModuleLoad (module.js:453:12)
    at Function.Module._load (module.js:445:3)
    at Module.runMain (module.js:611:10)
    at run (bootstrap_node.js:394:7)
    at startup (bootstrap_node.js:160:9)

npm verb lifecycle exl-touchnet-connector@0.0.4~start: unsafe-perm in lifecycle true
npm verb lifecycle exl-touchnet-connector@0.0.4~start: PATH: /usr/lib/node_modules/npm/bin/node-gyp-bin:/usr/local/htdocs/exl-touchnet-connector/node_modules/.bin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin:/opt/puppetlabs/bin
npm verb lifecycle exl-touchnet-connector@0.0.4~start: CWD: /usr/local/htdocs/exl-touchnet-connector
npm info lifecycle exl-touchnet-connector@0.0.4~start: Failed to exec start script
npm verb stack Error: exl-touchnet-connector@0.0.4 start: `node app/index.js`
npm verb stack Exit status 1
npm verb stack     at EventEmitter.<anonymous> (/usr/lib/node_modules/npm/lib/utils/lifecycle.js:255:16)
npm verb stack     at emitTwo (events.js:106:13)
npm verb stack     at EventEmitter.emit (events.js:191:7)
npm verb stack     at ChildProcess.<anonymous> (/usr/lib/node_modules/npm/lib/utils/spawn.js:40:14)
npm verb stack     at emitTwo (events.js:106:13)
npm verb stack     at ChildProcess.emit (events.js:191:7)
npm verb stack     at maybeClose (internal/child_process.js:920:16)
npm verb stack     at Process.ChildProcess._handle.onexit (internal/child_process.js:230:5)
npm verb pkgid exl-touchnet-connector@0.0.4
npm verb cwd /usr/local/htdocs/exl-touchnet-connector
npm ERR! Linux 3.10.0-1160.49.1.el7.x86_64
npm ERR! argv "/usr/local/bin/node" "/bin/npm" "start"
npm ERR! node v6.17.1
npm ERR! npm  v3.10.10
npm ERR! code ELIFECYCLE
npm ERR! exl-touchnet-connector@0.0.4 start: `node app/index.js`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the exl-touchnet-connector@0.0.4 start script 'node app/index.js'.
npm ERR! Make sure you have the latest version of node.js and npm installed.
npm ERR! If you do, this is most likely a problem with the exl-touchnet-connector package,
npm ERR! not with npm itself.
npm ERR! Tell the author that this fails on your system:
npm ERR!     node app/index.js
npm ERR! You can get information on how to open an issue for this project with:
npm ERR!     npm bugs exl-touchnet-connector
npm ERR! Or if that isn't available, you can get their info via:
npm ERR!     npm owner ls exl-touchnet-connector
npm ERR! There is likely additional logging output above.
npm verb exit [ 1, true ]

npm ERR! Please include the following file with any support request:
npm ERR!     /usr/local/htdocs/exl-touchnet-connector/npm-debug.log
